# backend/dto/knowledge_bases.go
@@ -1,0 +1,10 @@
+package dto
+
+type KnowledgeBaseFilters struct {
+	Name *string `json:"name"`
+}
+
+type ListKnowledgeBasesRequest struct {
+	ListRequest[KnowledgeBaseFilters]
+	ChatBotID uint `json:"chatbot_id"`
+}
